fix(avatar): ensure text alignment in avatar component

--- a/packages/varlet-ui/src/avatar/avatar.less
+++ b/packages/varlet-ui/src/avatar/avatar.less
@@ -55,6 +55,9 @@
   }
 
   &__text {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     padding: 0 4px;
     white-space: nowrap;
   }
